--- a/.drone-redis.yaml
+++ b/.drone-redis.yaml
@@ -9,6 +9,7 @@ steps:
   - redis-cli -h redis ping
   - redis-cli -h redis set FOO bar
   - redis-cli -h redis get FOO
+  - echo "Hello Redis!"
 
 services:
 - name: redis
