--- a/.drone-events.yaml
+++ b/.drone-events.yaml
@@ -2,7 +2,7 @@ kind: pipeline
 name: default
 
 steps:
-- name: test
+- name: branch-build
   image: golang
   commands:
     - sleep 15
@@ -12,7 +12,7 @@ steps:
     event:
       - push
      
-- name: test-pr
+- name: pr-build
   image: golang
   commands:
     - sleep 15
